--- a/05-recipe-card-esnext/style.css
+++ b/05-recipe-card-esnext/style.css
@@ -2,16 +2,22 @@
  * Note that these styles are loaded *before* editor styles, so that
  * editor-specific styles using the same selectors will take precedence.
  */
+
 .wp-block-gutenberg-examples-example-05-recipe-card-esnext .recipe-image {
-	background: #f1f1f1;
-	float: right;
-	width: 50%;
-	min-height: 100px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    min-width: auto;
+	width: 100%;
+	min-height: auto;
 	text-align: center;
+	border-radius: 20px;
 }
 
 .wp-block-gutenberg-examples-example-05-recipe-card-esnext .recipe-image button {
 	margin-top: 30px;
+	height: 100%;
 }
 
 .wp-block-gutenberg-examples-example-05-recipe-card-esnext .recipe-image button.image-button {
@@ -24,14 +30,19 @@
 	display: block;
 	z-index: 1;
 	position: relative;
+	width: 100%;
+	max-width: 100%;
+	min-width: 100%;
 }
 
-.wp-block-gutenberg-examples-example-05-recipe-card-esnext h2 {
-	font-size: 1.5em;
+.wp-block-gutenberg-examples-example-05-recipe-card-esnext h1 {
+	font-size: 5em;
+	margin-top: 0;
 }
 
 .wp-block-gutenberg-examples-example-05-recipe-card-esnext ul {
 	padding-left: 2.5em !important; /* Needs fix in Gutenberg. */
+	margin-top: 0 !important;
 }
 
 .wp-block-gutenberg-examples-example-05-recipe-card-esnext:after { 
